--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -1,111 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<script>function curday(sp, off){
-today = new Date();
-today.setDate(today.getDate() + off);
-var dd = today.getDate();
-var mm = today.getMonth()+1;
-var yyyy = today.getFullYear();
-
-if(dd<10) dd='0'+dd;
-if(mm<10) mm='0'+mm;
-return (mm+sp+dd+sp+yyyy);
-};</script>
-<style>
-body {margin:0}
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-.active, .active:hover{
-  background-color: #4CAF50;
-}
-li a:hover:not(.active) {
-  background-color: #111;
-}
-.block{
-  background-color: #4CACFF;
-  margin: 0px;
-  padding: 10px;
-  text-align: center;
-}
-a{text-decoration:none;font-weight: bold;}
-.LessonLine {
-  display: flex;
-  justify-content: space-between;
-  background-color: #4CACFF;
-  padding: 5px;
-}
-.LessonItem{
-margin:5px;
-}
-</style>
-
-</head>
-<body>
-<ul id="menubar">
-  <li><a href="?page=0">Rooster</a></li>
-  <li><a href="?page=1">Huiswerk</a></li>
-  <li><a href="?page=2">Instellingen</a></li>
-  <li><a href="?page=3">Over</a></li>
-</ul>
-  <p class="block" id="header"> Temp </p>
-<script>
-let pag = new URLSearchParams(window.location.search).get('page');
-if(!pag)
-pag = 0;
-let day = new URLSearchParams(window.location.search).get('day');
-if(!day)
-day = 0;
-document.getElementById("menubar").children[pag].children[0].className = "active";
-if(pag == 1){document.getElementById("header").innerText = "Huiswerk"} else if(pag == 1) {document.getElementById("header").innerHTML = "<a href='?day="+(parseInt(day)-1)+"&page="+pag+"'> < </a>Datum: "+curday("/",parseInt(day))+"<a href='?day="+(parseInt(day)+1)+"&page="+pag+"'> > </a>"}
-</script>
-  <div id="dataHolder" style="padding:20px;background-color:#f0f0ff;height:600px;"></div>
-  <script>
-  let lines = []
-  if(pag==0)
-  lines = ["Vak Naam","Huiswerk titel","[xx:xx-xx:xx]","hier staat meer uitleg over het huiswek"];
-  else
-  lines = ["Huiswerk titel","vak","[xx/xx/xxxx xx:xx-xx:xx]","uitleg"];
-  for(let k = 0;k<10;k++){
-  data = document.getElementById("dataHolder");
-  div = document.createElement('div');
-  data.appendChild(div);
-  div.className = "LessonItem"
-  
-  for(let i = 0;i<2;i++){
-	div2 = document.createElement('div');
-    div.appendChild(div2);
-    div2.className = "LessonLine";
-    div2.style = "width:75%;margin:0 auto;";
-	for(let j = 0;j<2;j++){
-	  span = document.createElement('span');
-      div2.appendChild(span);
-	  span.innerText = lines[j+i*2];
-    }
-  }
-  }
-  </script>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href="style.css">
+		<script src="script.js"></script>
+	</head>
+	<body>
+		<ul id="menubar">
+			<li><a href="?page=0">Rooster</a></li>
+			<li><a href="?page=1">Huiswerk</a></li>
+			<li><a href="?page=2">Instellingen</a></li>
+			<li><a href="?page=3">Over</a></li>
+		</ul>
+		<p class="block" id="header"> Temp </p>
+		<div id="dataHolder" style="padding:20px;background-color:#f0f0ff;height:600px;">
+		</div>
+		<script>
+			Ready();
+		</script>
+	</body>
 </html>
