--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -7,10 +7,10 @@
 	</head>
 	<body>
 		<ul id="menubar">
-			<li><a href="?page=0">Rooster</a></li>
-			<li><a href="?page=1">Huiswerk</a></li>
-			<li><a href="?page=2">Instellingen</a></li>
-			<li><a href="?page=3">Over</a></li>
+			<li><a class="icon" href="?page=0"><img src="https://img.icons8.com/wired/64/000000/grid.png"        style="width:8vh"/></a></li>
+			<li><a class="icon" href="?page=1"><img src="https://img.icons8.com/windows/32/000000/homework.png"  style="width:8vh"/></a></li>
+			<li><a class="icon" href="?page=2"><img src="https://img.icons8.com/ios/60/000000/settings.png"      style="width:8vh"/></a></li>
+			<li><a class="icon" href="?page=3"><img src="https://img.icons8.com/ios/64/000000/info--v1.png"      style="width:8vh"/></a></li>
 		</ul>
 		<p class="block" id="header"> Temp </p>
 		<div id="dataHolder" style="padding:20px;background-color:#f0f0ff;height:600px;">
