--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -13,7 +13,7 @@
 			<li><a class="icon" href="?page=3"><img src="https://img.icons8.com/ios/64/000000/info--v1.png"      style="width:8vh"/></a></li>
 		</ul>
 		<p class="block" id="header"> Temp </p>
-		<div id="dataHolder" style="padding:20px;background-color:#f0f0ff;height:600px;">
+		<div id="dataHolder" style="padding:20px;background-color:#f0f0ff;height:150vh;">
 		</div>
 		<script>
 			Ready();
