--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -2,17 +2,18 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<title>Sint-Janscollege</title>
 		<link rel="stylesheet" href="style.css">
 		<script src="script.js"></script>
 	</head>
 	<body>
 		<ul id="menubar">
-			<li><a class="icon" href="?page=0"><img src="https://img.icons8.com/wired/64/000000/grid.png"        style="width:8vh"/></a></li>
-			<li><a class="icon" href="?page=1"><img src="https://img.icons8.com/windows/32/000000/homework.png"  style="width:8vh"/></a></li>
-			<li><a class="icon" href="?page=2"><img src="https://img.icons8.com/ios/60/000000/settings.png"      style="width:8vh"/></a></li>
-			<li><a class="icon" href="?page=3"><img src="https://img.icons8.com/ios/64/000000/info--v1.png"      style="width:8vh"/></a></li>
+			<li><a class="icon" href="?page=0"><img class="image" src="https://img.icons8.com/wired/  64/000000/    grid.png"/></a></li>
+			<li><a class="icon" href="?page=1"><img class="image" src="https://img.icons8.com/windows/32/000000/homework.png"/></a></li>
+			<li><a class="icon" href="?page=2"><img class="image" src="https://img.icons8.com/ios/    60/000000/settings.png"/></a></li>
+			<li><a class="icon" href="?page=3"><img class="image" src="https://img.icons8.com/ios/    64/000000/info--v1.png"/></a></li>
 		</ul>
-		<p class="block" id="header"> Temp </p>
+		<p class="block" id="header"> PageName </p>
 		<div id="dataHolder"></div>
 		<script>Ready();</script>
 	</body>
