--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -7,15 +7,14 @@
 		<script src="script.js"></script>
 	</head>
 	<body>
-	<iframe src="https://lvob-elo.somtoday.nl/" height="200" width="300" title="Iframe Example"></iframe>
 		<ul id="menubar">
 			<li><a class="icon" href="?page=0"><img class="image" src="https://img.icons8.com/wired/  64/000000/    grid.png"/></a></li>
 			<li><a class="icon" href="?page=1"><img class="image" src="https://img.icons8.com/windows/32/000000/homework.png"/></a></li>
 			<li><a class="icon" href="?page=2"><img class="image" src="https://img.icons8.com/ios/    60/000000/settings.png"/></a></li>
 			<li><a class="icon" href="?page=3"><img class="image" src="https://img.icons8.com/ios/    64/000000/info--v1.png"/></a></li>
 		</ul>
-		<p class="block" id="header"> PageName </p>
-		<div id="dataHolder"></div>
+		<p class="block" id="header">PageName</p>
+		<div id="dataHolder">
 		<script>Ready();</script>
 	</body>
 </html>
