--- a/Bart/index.html
+++ b/Bart/index.html
@@ -26,6 +26,7 @@
 			animation-name: example;
 			animation-duration: 2s;
 			animation-iteration-count: 1;
+			animation-delay: 4s;
 		}
 		.top2 {
             max-width: 50%;
@@ -37,6 +38,7 @@
 			animation-name: example2;
 			animation-duration: 1s;
 			animation-iteration-count: 1;
+			animation-delay: 4s;
 		}
 		.top3 {
             max-width: 100%;
@@ -52,6 +54,7 @@
 			animation-name: example3;
 			animation-duration: 1s;
 			animation-iteration-count: 1;
+			animation-delay: 4s;
 		}
 		.top4 {
             max-width: 100%;
@@ -67,6 +70,7 @@
 			-webkit-text-fill-color: #000000; /* Will override color (regardless of order) */
 			-webkit-text-stroke-width: 2px;
 			-webkit-text-stroke-color: #A0A0A0;
+			animation-delay: 4s;
 		}
 
 @keyframes example {
