--- a/navigator/index.html
+++ b/navigator/index.html
@@ -9,10 +9,12 @@
 <body>
 	<input type="text" id="i1" value="A005"></input>
 	<input type="text" id="i2" value="A004"></input>
-	<button onclick="draw();">draw</button>
+	<button onclick="calcPath();">draw</button>
     <input type="range" value="1" step="1" min="0" max="2" id="floor" onchange="updateMap();">
 	<div style="position:relative">
-		<img id="theImg" src="P1.PNG" style="position:absolute;top:0px" />
+		<img id="img1" src="P1.PNG" style="position:absolute;top:0px" />
+		<img id="img2" src="P2.PNG" style="position:absolute;top:0px" />
+		<img id="img3" src="P3.PNG" style="position:absolute;top:0px" />
 		<canvas id='myCanvas' width='1271' height='890' style="position:absolute;top:0px"></canvas>
 	</div>
 	<script src="index.js"></script>
