--- a/MovieStorage/index.html
+++ b/MovieStorage/index.html
@@ -28,40 +28,43 @@ echo $html
 </head>
 <body>
     <div id="buttons">
-    <a class="btn" onclick="getString();">Get Data</a>
-    <a class="btn" onclick="sendString();">Send Data</a>
+        <a class="btn" onclick="getString();">Get Data</a>
+        <a class="btn" onclick="sendString();">Send Data</a>
     </div>
-    <p id="start">Movies:</p>
-    <div id="con">
+    <div style="display: flex;">
+        <div id="con" style="height: 100%;width: 500%;">
 
-    </div>
-    <div id="datas">
-        <a class="data">Name:</a><input id="name">
-        <a class="data">Lang:</a><input id="lang">
-        <a class="data">dvd:</a><input id="dvd" type="checkbox">
-        <a class="data">Company:</a><input id="comp">
-        <a class="data">Part:</a><input id="part" type="number">
-        <a class="btn" onclick="changeE();">Change</a>
-        <a class="btn" onclick="addE();">Add</a>
-        <a class="btn" onclick="remE();">Remove</a>
-    </div>
-    <div id="sort">
-        <input id="enName" type="checkbox" onchange="updateList();">
-        <a class="data">Name:</a>
-        <input id="sortName" onchange="updateList();">
-        <input id="enLang" type="checkbox" onchange="updateList();">
-        <a class="data">Lang:</a>
-        <input id="sortLang" onchange="updateList();">
-        <input id="enDvd" type="checkbox" onchange="updateList();">
-        <a class="data">dvd:</a>
-        <input id="sortDvd" type="checkbox" onchange="updateList();">
+        </div>
+        <div style="position: sticky;height: 400px;top: 20px;">
+            <div id="datas">
+                <a class="data">Name:</a><input id="name">
+                <a class="data">Lang:</a><input id="lang">
+                <a class="data">dvd:</a><input id="dvd" type="checkbox">
+                <a class="data">Company:</a><input id="comp">
+                <a class="data">Part:</a><input id="part" type="number">
+                <a class="btn" onclick="changeE();">Change</a>
+                <a class="btn" onclick="addE();">Add</a>
+                <a class="btn" onclick="remE();">Remove</a>
+            </div>
+            <div id="sort">
+                <input id="enName" type="checkbox" onchange="updateList();">
+                <a class="data">Name:</a>
+                <input id="sortName" onchange="updateList();">
+                <input id="enLang" type="checkbox" onchange="updateList();">
+                <a class="data">Lang:</a>
+                <input id="sortLang" onchange="updateList();">
+                <input id="enDvd" type="checkbox" onchange="updateList();">
+                <a class="data">dvd:</a>
+                <input id="sortDvd" type="checkbox" onchange="updateList();">
 
-        <input id="enComp" type="checkbox" onchange="updateList();">
-        <a class="data">Company:</a>
-        <input id="sortComp" onchange="updateList();">
-        <input id="enPart" type="checkbox" onchange="updateList();">
-        <a class="data">Part:</a>
-        <input id="sortPart" type="number" onchange="updateList();">
+                <input id="enComp" type="checkbox" onchange="updateList();">
+                <a class="data">Company:</a>
+                <input id="sortComp" onchange="updateList();">
+                <input id="enPart" type="checkbox" onchange="updateList();">
+                <a class="data">Part:</a>
+                <input id="sortPart" type="number" onchange="updateList();">
+            </div> 
+        </div>   
     </div>
 </body>
 </html>
