--- a/MovieStorage/index.html
+++ b/MovieStorage/index.html
@@ -1,8 +1,4 @@
-﻿<?php
-$html = file_get_html('http://www.google.com/');
-echo $html
-?>
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,7 +10,7 @@ echo $html
     <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-storage.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
     <script src="Func.js"></script>
     <link rel="stylesheet" href="st.css">
     <title>Upload Files</title>
@@ -27,42 +23,35 @@ echo $html
 
 </head>
 <body>
+    <style id="highlight"></style>
     <div id="buttons">
-        <a class="btn" onclick="getString();">Get Data</a>
-        <a class="btn" onclick="sendString();">Send Data</a>
+        <button onclick="getString();">Get Data</button>
+        <button onclick="sendString();">Send Data</button>
     </div>
     <div style="display: flex;">
-        <div id="con" style="height: 100%;width: 500%;">
-
+        <div id="con" style="height: 100%;width: 60%;">
         </div>
         <div style="position: sticky;height: 400px;top: 20px;">
             <div id="datas">
-                <a class="data">Name:</a><input id="name">
-                <a class="data">Lang:</a><input id="lang">
-                <a class="data">dvd:</a><input id="dvd" type="checkbox">
-                <a class="data">Company:</a><input id="comp">
-                <a class="data">Part:</a><input id="part" type="number">
-                <a class="btn" onclick="changeE();">Change</a>
-                <a class="btn" onclick="addE();">Add</a>
-                <a class="btn" onclick="remE();">Remove</a>
+                <div style="display:block"><a class="data">Name:</a><input id="name"></div>
+                <div style="display:block"><a class="data">Prefix:</a><input id="pre"></div>
+                <div style="display:block"><a class="data">dvd:</a><input id="dvd" type="checkbox"></div>
+                <button class="btn" onclick="changeE();">Change</button>
+                <button class="btn" onclick="addE();">Add</button>
+                <button class="btn" onclick="remE();">Remove</button>
+                <button class="btn" onclick="selectId(1,true);">Next</button>
             </div>
             <div id="sort">
-                <input id="enName" type="checkbox" onchange="updateList();">
-                <a class="data">Name:</a>
-                <input id="sortName" onchange="updateList();">
-                <input id="enLang" type="checkbox" onchange="updateList();">
-                <a class="data">Lang:</a>
-                <input id="sortLang" onchange="updateList();">
-                <input id="enDvd" type="checkbox" onchange="updateList();">
-                <a class="data">dvd:</a>
-                <input id="sortDvd" type="checkbox" onchange="updateList();">
-
-                <input id="enComp" type="checkbox" onchange="updateList();">
-                <a class="data">Company:</a>
-                <input id="sortComp" onchange="updateList();">
-                <input id="enPart" type="checkbox" onchange="updateList();">
-                <a class="data">Part:</a>
-                <input id="sortPart" type="number" onchange="updateList();">
+                <div style="display:block">
+                    <input id="enName" type="checkbox" onchange="updateList();">
+                    <a class="data">Name:</a>
+                    <input id="sortName" onchange="updateList();">
+                </div>
+                <div style="display:block">
+                    <input id="enDvd" type="checkbox" onchange="updateList();">
+                    <a class="data">dvd:</a>
+                    <input id="sortDvd" type="checkbox" onchange="updateList();">
+                </div>
             </div> 
         </div>   
     </div>
